--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Future Estetics</title>
+		<title>Future Aesthetics</title>
 		<script
 			src="https://kit.fontawesome.com/140c348a97.js"
 			crossorigin="anonymous"
@@ -44,7 +44,7 @@
 		</nav>
 
 		<header class="header section">
-			<h1 class="header__heading">Future Estetics</h1>
+			<h1 class="header__heading">Future Aesthetics</h1>
 			<p class="header__text">Intensywność natury zamknięta we flakoniku.</p>
 			<a href="#offers" class="header__btn btn-special-animation"
 				>Poznaj ofertę</a
@@ -90,7 +90,7 @@
 			<section class="hero-img section">
 				<div class="white-block white-block-left"></div>
 				<div class="white-block white-block-right"></div>
-				<p class="hero-img__title">Future Estetics</p>
+				<p class="hero-img__title">Future Aesthetics</p>
 				<hr />
 				<p class="hero-img__text">Odprężenie po burzliwym dniu</p>
 				<hr />
@@ -382,7 +382,7 @@
 				</div>
 				<hr />
 				<p class="footer__bottom-text">
-					&copy; <span class="footer__year"></span> Future Estetics
+					&copy; <span class="footer__year"></span> Future Aesthetics
 				</p>
 			</footer>
 		</main>
